--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
     database: 0
     host: localhost
     port: 6379
-    password: 123456
+    password: abc123456
     jedis:
       pool:
         max-active: 1000
