--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,4 +96,10 @@ tencent:
 wx:
   app-id: wx6dd933832df46a7f
   app-secret: ce1bbb979578336d705295ecbd1665c4
+workflow:
+  url: http://192.168.31.91:9090/emos-workflow
+
+emos:
+  recieveNotify: http://192.168.31.91:8090/emos-api/meeting/recieveNotify
+
 
