--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,7 +101,8 @@ workflow:
 
 emos:
   recieveNotify: http://192.168.31.91:8090/emos-api/meeting/recieveNotify
-  tcode: 212311
-  code: ''
+  tcode: "063331"
+  code: FC582F8882280552
+  icode: FC582F8882280552
 
 
